when the screen width is 500px only 1 column will be displayed.

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,15 @@ footer a:hover{
     p{
         font-size: 15px;
     }
+
+    .projects{
+        padding: 200px;
+        text-align: center;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 100%;
+        background-color: #F97068;
+    }
 }
 
 
